--- a/saata/src/main/AndroidManifest.xml
+++ b/saata/src/main/AndroidManifest.xml
@@ -1,62 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-package="com.regan.saata">
+    package="com.regan.saata">
 
-<uses-permission android:name="android.permission.INTERNET" />
-<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-<uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
-<application
-    android:name=".application.AudioToolsApplication"
-    android:allowBackup="true"
-    android:icon="@drawable/app_icon"
-    android:label="@string/app_name"
-    android:roundIcon="@mipmap/ic_launcher_round"
-    android:supportsRtl="true"
-    android:theme="@style/AppTheme">
-    <activity android:name=".activity.AudioCut2Activity"></activity>
-    <activity android:name=".activity.AudioSingleSelectActivity" />
-    <activity android:name=".activity.AudioMultiSelectActivity" />
-    <activity android:name=".activity.VideoSingleSelectActivity" />
-    <activity android:name=".activity.WebViewActivity" />
+    <application
+        android:name=".application.AudioToolsApplication"
+        android:allowBackup="true"
+        android:icon="@drawable/app_icon"
+        android:label="@string/app_name"
+        android:roundIcon="@mipmap/ic_launcher_round"
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme">
+        <activity android:name=".activity.VideoShowActivity"></activity>
+        <activity android:name=".activity.AudioCut2Activity" />
+        <activity android:name=".activity.AudioSingleSelectActivity" />
+        <activity android:name=".activity.AudioMultiSelectActivity" />
+        <activity android:name=".activity.VideoSingleSelectActivity" />
+        <activity android:name=".activity.WebViewActivity" />
 
-    <provider
-        android:name="androidx.core.content.FileProvider"
-        android:authorities="${applicationId}.fileprovider"
-        android:exported="false"
-        android:grantUriPermissions="true">
-        <meta-data
-            android:name="android.support.FILE_PROVIDER_PATHS"
-            android:resource="@xml/provider_paths" />
-    </provider>
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="${applicationId}.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/provider_paths" />
+        </provider>
 
-    <activity android:name=".activity.AudioMergeActivity" />
-    <activity android:name=".activity.AudioSpeedActivity" />
-    <activity android:name=".activity.AudioVolumeActivity" />
-    <activity android:name=".activity.AudioCutActivity" />
-    <activity
-        android:name=".activity.SplashActivity"
-        android:theme="@style/SplashTheme">
-        <!--android:screenOrientation="portrait"-->
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
+        <activity android:name=".activity.AudioMergeActivity" />
+        <activity android:name=".activity.AudioSpeedActivity" />
+        <activity android:name=".activity.AudioVolumeActivity" />
+        <activity android:name=".activity.AudioCutActivity" />
+        <activity
+            android:name=".activity.SplashActivity"
+            android:theme="@style/SplashTheme">
 
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
-    </activity>
-    <activity
-        android:name=".activity.MainActivity"
-        android:launchMode="singleTask"
-        android:screenOrientation="portrait" />
-    <activity
-        android:name=".activity.AudioTranscodeActivity"
-        android:screenOrientation="portrait" />
-    <activity
-        android:name=".activity.AudioExtractActivity"
-        android:screenOrientation="portrait" />
-</application>
+            <!-- android:screenOrientation="portrait" -->
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".activity.MainActivity"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.AudioTranscodeActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.AudioExtractActivity"
+            android:screenOrientation="portrait" />
+    </application>
 
 </manifest>
