--- a/saata/build.gradle
+++ b/saata/build.gradle
@@ -54,6 +54,7 @@ android {
 }
 
 dependencies {
+//    implementation(name: 'android_ffmpeg-debug', ext: 'aar')
     implementation(name: 'android_ffmpeg-debug', ext: 'aar')
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
@@ -63,4 +64,7 @@ dependencies {
     implementation 'com.alibaba:fastjson:1.2.10'
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'com.zhihu.android:matisse:+'
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
 }
