--- a/saata/build.gradle
+++ b/saata/build.gradle
@@ -11,7 +11,8 @@ android {
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
-
+        manifestPlaceholders = [CHANNEL_NAME: "YYbao"]//添加一个默认渠道号
+        flavorDimensions 'release'
     }
 
     //添加我们签名文件配置
@@ -43,7 +44,21 @@ android {
             signingConfig signingConfigs.release
         }
     }
-
+    //多渠道打包支持
+    productFlavors {
+        YYbao {//自己打包测试使用
+            dimension 'release'
+            manifestPlaceholders = [CHANNEL_NAME: YYbao]
+        }
+        Mi {
+            dimension 'release'
+            manifestPlaceholders = [CHANNEL_NAME: Mi]
+        }
+    }
+    //注意我注释掉的，可以去掉注释，那样的话，下面这句就可以不用了
+    productFlavors.all {
+        flavor -> flavor.manifestPlaceholders = [CHANNEL_NAME: name]
+    }
     sourceSets {
         main {
             jni.srcDirs = []  //这一行加不加都可以
@@ -66,4 +81,6 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.zhihu.android:matisse:+'
     implementation 'com.github.bumptech.glide:glide:4.9.0'
+    implementation 'com.umeng.umsdk:analytics:8.0.0'
+    implementation 'com.umeng.umsdk:common:2.0.0'
 }
